--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <meta name="description" content="Get instant loans in Kenya with Uwezo Funds. Quick approval, competitive rates, and M-Pesa disbursement. Apply for loans instantly via a 100% digital process." />
   <meta name="author" content="Uwezo Funds" />
 
+  <!-- PWA / OS integration: ensure installed app shows correct name -->
+  <meta name="application-name" content="Uwezo Funds" />
+  <meta name="apple-mobile-web-app-title" content="Uwezo Funds" />
+  <meta name="msapplication-TileColor" content="#1f2937" />
+  <meta name="msapplication-TileImage" content="/logo-192.png" />
+
   <meta property="og:title" content="Uwezo Funds - Your Trusted Loan Partner in Kenya" />
   <meta property="og:description" content="Get instant loans in Kenya with Uwezo Funds. Quick approval, competitive rates, and M-Pesa disbursement." />
   <meta property="og:type" content="website" />
